--- a/mm/templates/about-us.html
+++ b/mm/templates/about-us.html
@@ -28,7 +28,7 @@
           <div class="main-nav__user  main-nav__user--temp">
             <a class="button" href="register.html">Open live account</a>
             <a class="button  button--black" href="login.html">Log In</a>
-            <a class="button  button--number" href="tel:+442038290032">442038290032</a>
+            <a class="button  button--number" href="tel:++442038290032">+442038290032</a>
           </div>
         </nav>
       </div>
@@ -65,14 +65,14 @@
       </ul>
       <div class="title  title--down">
         <h1>Trade with MultiplyMarket</h1>
-        <p class="title__sub">Multiply Market presents its users with the optimal platform for investing in Forex, Futures and Commodities.<br>We are committed to providing each and every user with the best experience possible, and always aim to provide the necessary means and resources for successful trading.</p>
+        <p class="title__sub">MultiplyMarket presents its users with the optimal platform for investing in Forex, Futures and Commodities.<br>We are committed to providing each and every user with the best experience possible, and always aim to provide the necessary means and resources for successful trading.</p>
         <a href="register.html" class="button  button--title">Open account</a>
       </div>
     </div>
   </section>
   <section class="give">
     <div class="container">
-      <h1>Multiply Market gives you</h1>
+      <h1>MultiplyMarket gives you</h1>
       <div class="give__flex">
         <div class="give__box">
           <img src="../img/calc.svg" alt="">
