--- a/mm/templates/mobile.html
+++ b/mm/templates/mobile.html
@@ -28,7 +28,7 @@
           <div class="main-nav__user  main-nav__user--temp">
             <a class="button" href="register.html">Open live account</a>
             <a class="button  button--black" href="login.html">Log In</a>
-            <a class="button  button--number" href="tel:+442038290032">442038290032</a>
+            <a class="button  button--number" href="tel:++442038290032">+442038290032</a>
           </div>
         </nav>
       </div>
@@ -67,10 +67,10 @@
         <h1>MultiplyMarket Trade Mobile</h1>
         <div class="trader__flex">
           <div class="trader__left">
-            <b>Multiply Market Trading Mobile Application:<br>The independence to trade at any time and place</b>
-            <p>Don’t lag – begin making trades from your device, no matter if it’s phone or tablet, Apple or Android Multiply Market`s mobile software gives you the opportunity to invest, operate your profile and check Special MultiplyMarket’s mobile software affords you with abilities to invest, to operate personal profile and to check the newest financial tendencies with no strict attachment to time and place where you are, and without a fee. The possible potential of that software is to please every trader, whether a beginner or an advanced patron. Keywords inside of that are intuitive plain.</p>
+            <b>MultiplyMarket Trading Mobile Application:<br>The independence to trade at any time and place</b>
+            <p>Don’t lag – begin making trades from your device, no matter if it’s phone or tablet, Apple or Android MultiplyMarket`s mobile software gives you the opportunity to invest, operate your profile and check Special MultiplyMarket’s mobile software affords you with abilities to invest, to operate personal profile and to check the newest financial tendencies with no strict attachment to time and place where you are, and without a fee. The possible potential of that software is to please every trader, whether a beginner or an advanced patron. Keywords inside of that are intuitive plain.</p>
             <p>As we have mentioned before, this software is suitable for almost all devices, whether it’s Apple or Android products.Stay informed regarding newest market processes, and act deliberately keeping to it. Place deals freely strict from your mobile.</p>
-            <p>Invest your capital in a broad assortment of instruments and come in the global markets. Combined chartings among with symbols, together with technological statistics and the newest financial tendencies could assist you in decision to open or close agreed position. Besides of that, platform affords an absolutely safeness and privacy of its mobile software for your use.</p>
+            <p>Invest your capital in a broad assortment of instruments and come in the global markets. Combined chartings among with symbols, together with technological statistics and the newest financial tendencies could assist you in the decision to open or close agreed position. Besides of that, platform affords an absolutely safeness and privacy of its mobile software for your use.</p>
             <p>Use your mobile device to invest in a variety of financial instruments – Forex, Futures and Commodities.</p>
             <p>Try your mobile device to invest in wide range of trading instruments, such as Forex, Futures and Commodities.</p>
           </div>
