--- a/mm/templates/privacy.html
+++ b/mm/templates/privacy.html
@@ -28,7 +28,7 @@
           <div class="main-nav__user  main-nav__user--temp">
             <a class="button" href="register.html">Open live account</a>
             <a class="button  button--black" href="login.html">Log In</a>
-            <a class="button  button--number" href="tel:+442038290032">442038290032</a>
+            <a class="button  button--number" href="tel:++442038290032">+442038290032</a>
           </div>
         </nav>
       </div>
@@ -104,7 +104,7 @@
         <p>In case you have any inquiries regarding the privacy protocol or something related to the platform, please feel free to contact us at any time. You can send us an e-mail, call us or fax us. There is always a dedicated MultiplyMarket employee to answer your questions.</p>
         <b class="info__title">Registered Address:</b>
         <p>Company name: VACENTY FINANCE LIMITED<br>Address: Trust Company Complex , Ajeltake Road, Majuro, Marshall Islands MH96960</p>
-        <p>Phone: 442038290032<br>Email: info@MultiplyMarket.com</p>
+        <p>Phone: +442038290032<br>Email: info@MultiplyMarket.com</p>
       </div>
     </div>
   </section>
