--- a/mm/templates/register.html
+++ b/mm/templates/register.html
@@ -28,7 +28,7 @@
           <div class="main-nav__user  main-nav__user--temp">
             <a class="button">Open live account</a>
             <a class="button  button--black" href="login.html">Log In</a>
-            <a class="button  button--number" href="tel:+442038290032">442038290032</a>
+            <a class="button  button--number" href="tel:++442038290032">+442038290032</a>
           </div>
         </nav>
       </div>
