--- a/mm/templates/segregated.html
+++ b/mm/templates/segregated.html
@@ -28,7 +28,7 @@
           <div class="main-nav__user  main-nav__user--temp">
             <a class="button" href="register.html">Open live account</a>
             <a class="button  button--black" href="login.html">Log In</a>
-            <a class="button  button--number" href="tel:+442038290032">442038290032</a>
+            <a class="button  button--number" href="tel:++442038290032">+442038290032</a>
           </div>
         </nav>
       </div>
@@ -65,14 +65,14 @@
       </ul>
       <div class="segregated__content">
         <h1>Segregated Accounts</h1>
-        <p class="title__sub">The unique MultiplyMarket a Loyalty Saver Account allows their users to conduct trades perfectly safe and keeps them out of slow transaction loadings or information and payments errors. </p>
+        <p class="title__sub">The unique MultiplyMarket Loyalty Saver Account allows their users to conduct trades perfectly safe and keeps them out of slow transaction loadings or information and payments errors. </p>
         <div class="segregated__adv">
           <b>Advantages:</b>
           <p>There are few more additional benefits that are shaped exactly to satisfy customers common needs. With all that major pluses, you can be sure in: </p>
           <ul>
-            <li>100 % customers satisfying</li>
+            <li>100 % customers satisfaction</li>
             <li>24/7 users support and help in dealing the most common problem issues</li>
-            <li>Effective shifting of your capital</li>
+            <li>Effectiveness of your capital</li>
             <li>Reliable chargeback security</li>
             <li>Convenient and user-friendly functions of your funds</li>
           </ul>
