--- a/mm/templates/web.html
+++ b/mm/templates/web.html
@@ -28,7 +28,7 @@
           <div class="main-nav__user  main-nav__user--temp">
             <a class="button" href="register.html">Open live account</a>
             <a class="button  button--black" href="login.html">Log In</a>
-            <a class="button  button--number" href="tel:+442038290032">442038290032</a>
+            <a class="button  button--number" href="tel:++442038290032">+442038290032</a>
           </div>
         </nav>
       </div>
@@ -67,8 +67,8 @@
         <h1>MultiplyMarket Web Trader</h1>
         <div class="trader__flex">
           <div class="trader__left">
-            <p>Multiply Market`s highest purpose is to turn its users into successful traders and increase their success rates as much as possible. For that purpose we give you the Multiply Market Online trader, which enables you to be 100% involved in the trading process and adjust according to the market conditions, all the while letting you plan your trading activities to your preference.</p>
-            <p>Utilize the full scope of the latest technological developments in the field by trading from any internet connectible device. Investing in Forex, Commodities and CFD has never been easier thanks to the Multiply Market Online Trader.</p>
+            <p>MultiplyMarket`s highest purpose is to turn its users into successful traders and increase their success rates as much as possible. For that purpose we give you the MultiplyMarket Online trader, which enables you to be 100% involved in the trading process and adjust according to the market conditions, all the while letting you plan your trading activities to your preference.</p>
+            <p>Utilize the full scope of the latest technological developments in the field by trading from any internet connectible device. Investing in Forex, Commodities and CFD has never been easier thanks to the MultiplyMarket Online Trader.</p>
             <ul>
               <li>Invest in a wide selection of instruments.</li>
               <li>Perform the trades swiftly.</li>
@@ -87,18 +87,18 @@
           </div>
         </div>
         <div class="trader__sub-content">
-          <p>Multiply Market grants you a gateway to all your trading needs with the online and mobile trading applications. They are extremely intuitive and functional, enabling you to start a trade whenever you want, from anywhere with internet access. In case you already have a trading profile you can start a trade immediately.</p>
-          <p>The Multiply Market Online Trader present users with the option to choose from a number of languages, it features the latest charts, fast operation of the trades, and best of all, it makes everything easy. You have the ability to access to trader from a number of different devices such as Apple or Android phone, tablet or PC. The platform is easy to use on every device and you can handle your investments with just a few clicks.</p>
-          <p>Due to the intuitiveness and easiness of use, the Multiply Market Online trader will make sure that you are fully informed about all trades that interest you. Stay knowledgeable on the latest market news and trends, without having to leave your couch.</p>
+          <p>MultiplyMarket grants you a gateway to all your trading needs with the online and mobile trading applications. They are extremely intuitive and functional, enabling you to start a trade whenever you want, from anywhere with internet access. In case you already have a trading profile you can start a trade immediately.</p>
+          <p>The MultiplyMarket Online Trader present users with the option to choose from a number of languages, it features the latest charts, fast operation of the trades, and best of all, it makes everything easy. You have the ability to access to trader from a number of different devices such as Apple or Android phone, tablet or PC. The platform is easy to use on every device and you can handle your investments with just a few clicks.</p>
+          <p>Due to the intuitiveness and easiness of use, the MultiplyMarket Online trader will make sure that you are fully informed about all trades that interest you. Stay knowledgeable on the latest market news and trends, without having to leave your couch.</p>
           <b>It lets you:</b>
           <ul>
             <li>Have full control over your profile.</li>
             <li>Perform in-depth market analysis.</li>
             <li>Invest in a wide selection of orders.</li>
           </ul>
-          <p>The trading field can be very volatile and the conditions can change in a matter of minutes. Therefore, you need to be able to react quickly in such cases. With the Multiply Market Online Trader, you act accordingly and access your trades at any moment. The advantage is in your hands.</p>
+          <p>The trading field can be very volatile and the conditions can change in a matter of minutes. Therefore, you need to be able to react quickly in such cases. With the MultiplyMarket Online Trader, you act accordingly and access your trades at any moment. The advantage is in your hands.</p>
           <p>With the hastened pace of modern life, you need to be constantly on the go, but the platform lets you combine that with your trading needs, without having to compromise. It`s accessible from any browser, there is no need for you to be stuck to any specific place. Be it in your office, or from a friend`s PC, logging into your account and trading or just checking something is quick and simple.</p>
-          <p>Using Multiply Market to trade is like a walk in the park.</p>
+          <p>Using MultiplyMarket to trade is like a walk in the park.</p>
         </div>  
       </div>
     </div>
