--- a/mm/templates/account-funding.html
+++ b/mm/templates/account-funding.html
@@ -28,7 +28,7 @@
           <div class="main-nav__user  main-nav__user--temp">
             <a class="button" href="register.html">Open live account</a>
             <a class="button  button--black" href="login.html">Log In</a>
-            <a class="button  button--number" href="tel:+442038290032">442038290032</a>
+            <a class="button  button--number" href="tel:++442038290032">+442038290032</a>
           </div>
         </nav>
       </div>
@@ -67,7 +67,7 @@
         <h1>Account Funding</h1>
       </div>
       <div class="content">
-        <p>You can put money on your Multiply Market account in 3 different ways, according to your preferences. Log in to your Multiply Market account and go to the button for depositing. Notice that there are 3 available methods for doing so:</p>
+        <p>You can put money on your MultiplyMarket account in 3 different ways, according to your preferences. Log in to your MultiplyMarket account and go to the button for depositing. Notice that there are 3 available methods for doing so:</p>
         <b>1. Using a Credit Card</b>
         <p>The quickest method available. It lets you put money on your profile momentarily. Making a deposit with a credit card is super easy as well, you just need to choose it as your desired method and then fill in the necessary information. Note that you need to have an international credit card in order for the payment to be accepted.</p>
         <p>The smallest deposit amount is $250, whereas the deposit ceiling is $5,000. The withdrawal limitations are the same.</p>
@@ -77,7 +77,7 @@
         <p>In order to use a wire transfer to put money on your account, you need to fill in the necessary documents at the bank. Know that there is a minimum allowed amount of $10000 only, so you need to consider if this is the right deposit option for you.</p>
         <p>It is possible that the process takes about 5 work days before the payment is completed. As soon as the money is on your profile, you will receive an e-mail notification.</p>
         <b>Withdrawing money from the account</b>
-        <p>Withdrawing money from your Multiply Market profile is very easy to do and takes no time at all. We are always 100% committed to doing what`s best for our users.</p>
+        <p>Withdrawing money from your MultiplyMarket profile is very easy to do and takes no time at all. We are always 100% committed to doing what`s best for our users.</p>
         <p>The money can also be withdrawn with a regular bank transferal. You can request the funds to be withdrawn in any method you find most comfortable. Note that it will be returned to the same account you made the deposit from.</p>
         <b>In order to make a withdrawal you need to:</b>
         <ul>
@@ -86,11 +86,11 @@
         </ul>
         <b>Things you should take into account:</b>
         <ul>
-          <li>Multiply Market takes care of transferring the deposit money.</li>
+          <li>MultiplyMarket takes care of transferring the deposit money.</li>
           <li>The money you’ve earned from trading will be sent to the account that you`ve specified.</li>
           <li>In some cases a back-charge might be imposed and deducted from the money that is being withdrawn.</li>
         </ul>
-        <p>In case you would like to ask anything related to putting money on the Live Account, feel free to get in touch with a Multiply Market employee.</p>
+        <p>In case you would like to ask anything related to putting money on the Live Account, feel free to get in touch with a MultiplyMarket employee.</p>
       </div>
     </div>
   </section>
