--- a/mm/templates/account-types.html
+++ b/mm/templates/account-types.html
@@ -28,7 +28,7 @@
           <div class="main-nav__user  main-nav__user--temp">
             <a class="button" href="register.html">Open live account</a>
             <a class="button  button--black" href="login.html">Log In</a>
-            <a class="button  button--number" href="tel:+442038290032">442038290032</a>
+            <a class="button  button--number" href="tel:++442038290032">+442038290032</a>
           </div>
         </nav>
       </div>
@@ -160,17 +160,17 @@
   </section>
   <section class="steps">
     <div class="container">
-      <h1>Steps for opening a Multiply Market Trading Profile</h1>
-      <p class="steps__italy">Making any account type of trading profile at MultiplyMarket is laidback and flawlessly smooth.</p>
+      <h1>Steps for opening a MultiplyMarket Trading Profile</h1>
+      <p class="steps__italy">Opening a trading account at MultiplyMarket</p>
       <hr>
       <b>1. Pick the account types depending on your objectives and needs</b>
-      <p>3 available account types are supplemented with lots of additional features that bring some extra pluses to the investor. You can easily sign up for any of them. And keep the notice that you can change the account type after putting money on your acc.</p>
+      <p>Three available account types are supplemented with lots of additional features that bring some extra pluses to the investor. You can easily sign up for any of them. And keep the notice that you can change the account type after putting money on your acc.</p>
       <hr>
-      <b>2. Fill out the demanded information and accomplish an identity approval</b>
+      <b>2. Fill out the demanded information and  confirm your identity</b>
       <p>You just need to complete information profile with your personal data and to provide some identity papers.</p>
       <hr>
-      <b>3. Depositing money into your acc</b>
-      <p>Once we approve and authorize your application, you will make your payments and withdraws suddenly.</p>
+      <b>3. Depositing money into your account</b>
+      <p>Once we approve and authorize your application, you will be able to make your payments and withdrawals swiftly.</p>
     </div>
   </section>
   <section class="payment">
