--- a/mm/templates/contact.html
+++ b/mm/templates/contact.html
@@ -28,7 +28,7 @@
           <div class="main-nav__user  main-nav__user--temp">
             <a class="button" href="register.html">Open live account</a>
             <a class="button  button--black" href="login.html">Log In</a>
-            <a class="button  button--number" href="tel:+442038290032">442038290032</a>
+            <a class="button  button--number" href="tel:++442038290032">+442038290032</a>
           </div>
         </nav>
       </div>
@@ -66,7 +66,7 @@
       <div class="info">
         <h1>Contact Us</h1>
         <p><b>Support email:</b> support@multiplymarket.com</p>
-        <p><b>Support phone:</b> +442038290032</p>
+        <p><b>Support phone:</b> ++442038290032</p>
         <p><b>Monday to Friday</b> between 10:00 to 18:00 GMT</p>
         <p><b>Our address:</b> Center: Zurich, World Trade Center (Leutschenbachstrasse 95, Zurich, 8050)</p>
       </div>
