--- a/mm/templates/account-faq.html
+++ b/mm/templates/account-faq.html
@@ -78,14 +78,14 @@
         <b>Which platform should you use?</b>
         <p>There are a variety of different platforms available from MultiplyMarket to meet the requirements of different traders with different circumstances.</p>
         <p><strong>MultiplyMarket MetaTrader 4</strong> - Download this popular, world-renowned Forex desktop platform if you predominately trade in foreign currencies. It is both user-friendly and state-of-the-art.</p>
-        <p><strong>MultiplyMarket Mobile</strong> - this solution provides apps for Android, tablets, and iPhone, enabling traders to trade form anywhere in the world, from a variety of devices.</p>
+        <p><strong>MultiplyMarket Mobile</strong> - this solution provides apps for Android, tablets, and iPhone, enabling traders to trade from anywhere in the world, from a variety of devices.</p>
         <b>What type of information do you need to give in order to trade?</b>
         <p>You are requested to give the following information for proof of identity upon registration:</p>
         <p>A certified, original copy of your passport or ID.</p>
         <p>A utility bill with proof of your mailing address.</p>
         <p>You will need to clearly indicate the beneficiary name on the MultiplyMarket Customer Agreement. It is important that the account beneficiary name corresponds to the name on the customer agreement form, and also the documents for proof of identity. In addition, if you wish to withdraw funds, it must be to the same beneficiary.</p>
         <b>How do you manage your risk?</b>
-        <p>The stop loss order and the limit order are the most common risk management tools in Forex trading. A limit order stets a restriction on the minimum price to be received or the maximum price to be paid. An automatic liquidation at a predetermined price for a particular position is called a stop loss. This is used to limit potential losses if the market moves against an investor’s position.</p>
+        <p>The stop-loss order and the limit order are the most common risk management tools in Forex trading. A limit order sets a restriction on the minimum price to be received or the maximum price to be paid. An automatic liquidation at a predetermined price for a particular position is called a stop loss. This is used to limit potential losses if the market moves against an investor’s position.</p>
       </div>
     </div>
   </section>
