--- a/mm/templates/account-funding.html
+++ b/mm/templates/account-funding.html
@@ -78,7 +78,7 @@
         <p>It is possible that the process takes about 5 work days before the payment is completed. As soon as the money is on your profile, you will receive an e-mail notification.</p>
         <b>Withdrawing money from the account</b>
         <p>Withdrawing money from your MultiplyMarket profile is very easy to do and takes no time at all. We are always 100% committed to doing what`s best for our users.</p>
-        <p>The money can also be withdrawn with a regular bank transferal. You can request the funds to be withdrawn in any method you find most comfortable. Note that it will be returned to the same account you made the deposit from.</p>
+        <p>The money can also be withdrawn with a regular bank transferal. You can request the funds to be withdrawn by any method you find most comfortable. Note that it will be returned to the same account you made the deposit from.</p>
         <b>In order to make a withdrawal you need to:</b>
         <ul>
           <li>Log in to your account in our client area and submit a withdrawal request online.</li>
@@ -88,7 +88,7 @@
         <ul>
           <li>MultiplyMarket takes care of transferring the deposit money.</li>
           <li>The money you’ve earned from trading will be sent to the account that you`ve specified.</li>
-          <li>In some cases a back-charge might be imposed and deducted from the money that is being withdrawn.</li>
+          <li>In some cases, a back-charge might be imposed and deducted from the money that is being withdrawn.</li>
         </ul>
         <p>In case you would like to ask anything related to putting money on the Live Account, feel free to get in touch with a MultiplyMarket employee.</p>
       </div>
