--- a/mm/templates/futures.html
+++ b/mm/templates/futures.html
@@ -77,7 +77,7 @@
           <li>Speeded up trading process define</li>
         </ul>
         <b class="info__title">Futures definition</b>
-        <p>Futures is a broadly used trading instrument, which could be also defined thought-out as a forward contract. A future must consist in a two-sided agreement to proceed to a purchase or to sell an asset, which had previously been agreed under a price and a date. It provides you with the ability to be speculative about it or to join in hedging activities touching the asset’s value.</p>
+        <p>Futures is a broadly used trading instrument, which could be also defined thought-out as a forward contract. A future must consist of a two-sided agreement to proceed to a purchase or to sell an asset, which had previously been agreed under a price and a date. It provides you with the ability to be speculative about it or to join in hedging activities touching the asset’s value.</p>
         <p>The purchasing party is addressed also as “long” (the one obligated to buy the declared instrument at some moment in time), while the selling party (the one that consented to sell the instrument) is notified as “short”. Those terms are raised from two parties’ hopes to make a contract. Eventually, the selling side is better off if the price of the instrument falls and the buying side is better off if the instrument price growths. Keep in mind that it is the arrangement to purchase at a definite adjusted price.</p>
         <p>When speaking about the investment in futures, the instrument might be many of things, ranging from crude oil and precious metal to commodities, company stock and much more.</p>
       </div>
