--- a/aff/sass/blocks/control.scss
+++ b/aff/sass/blocks/control.scss
@@ -46,6 +46,11 @@
   }
 }
 
+.control__active {
+  color: #fff !important;
+  background: #292929;
+}
+
 @media screen and ($tablet-widths) {}
 
 @media screen and ($mobile-widths) {
