--- a/aff/sass/blocks/main-nav.scss
+++ b/aff/sass/blocks/main-nav.scss
@@ -21,6 +21,16 @@
   padding: 5px 20px;
   border: 1px solid $yc;
   border-radius: 3px;
+  transition: 0.2s;
+  cursor: pointer;
+  
+  &:hover {
+    background: $yc;
+  }
+  
+  &:hover a {
+    color: #fff;
+  }
 }
 
 .main-nav__toggle {
