--- a/forex/templates/platforms-mobile.html
+++ b/forex/templates/platforms-mobile.html
@@ -128,13 +128,13 @@
           </div>
           <div class="page-footer__contact">
             <b>Support</b>
-            <p>e-mail: support@forex24.com</p>
+            <p>e-mail: support@forex24global.com</p>
           </div>
           <p class="page-footer__text">UK Number: +442080891644</p>
         </div>
       </div>
       <div class="page-footer__copyright">
-        <p>© 2017 All rights reserved LYDYA FINANCIAL LTD.<br>Located at 155 Ayias Fylaxeos, Ersi Court Suite 202, 3083 Limassol, Cyprus.</p>
+        <p>© 2017 All rights reserved LYDYA FINANCIAL LTD.<br>Located at Ajeltake Road, Trust Company Complex, MH 96960, Ajeltake Island, Majuro, Marshall Islands..</p>
         <p>Forex24 Global is a brand owned and operated by Lydya Financial Ltd, a Cyprus Investment Firm (CIF) regulated and supervised by the Cyprus Securities and Exchange Commission (CySEC) with CIF Licence number 300/16 and Company registration number HE334292.</p>
         <p>The Company is also registered with: FCA in UK with reg. no. 782501; BaFin in Germany with reg. no. 1349943; CONSOB in Italy with reg. no. 4624; ACP in France with reg. no. 75980; CNMV in Spain with reg. no. 4373.</p>
       </div>
