--- a/mm/templates/terms.html
+++ b/mm/templates/terms.html
@@ -26,8 +26,8 @@
             <img src="../img/logo-w.svg" width="180" height="auto" alt="MultiplyMarket">
           </a>
           <div class="main-nav__user  main-nav__user--temp">
-            <a class="button" href="register.html">Open live account</a>
-            <a class="button  button--black" href="login.html">Log In</a>
+            <a class="button" href="https://client.multiplymarket.com/en/members/register/real">Open live account</a>
+            <a class="button  button--black" href="https://client.multiplymarket.com/en/members/login">Log In</a>
             <a class="button  button--number" href="tel:++442038290032">+442038290032</a>
           </div>
         </nav>
@@ -68,7 +68,6 @@
         <b>Disclaimer</b>
           <p>You should familiarize yourself with the things listed here. When you enter the website and its subdomains, you are accepting to abide by the stated terms and conditions. In case you are in a disagreement with them, then you should not enter the website.</p>
           <p>Copyright for the pages and for the screens displaying the pages, and for the information and material therein and in their arrangement, is owned by © 2017. VACENTY FINANCE LIMITED All Rights Reserved. Registered in Marshall Islands, Trust Company Complex, Ajelatake Road, Ajelatake Island, Majuro. Marshall Islands, MH96960(henceforth: “MultiplyMarket”) unless otherwise indicated.</p>
-          <p>Credit card clearing is processed by grant oak worldwide ltd with registered address Igoumenitsas 12, CONNECTEDSKY HOUSE, 2027 Nicosia, Cyprus.</p>
         <b>Trademarks</b>
           <p>MultiplyMarket is trademark and service mark of VACENTY FINANCE LIMITED and it used and/or registered throughout the world. VACENTY FINANCE LIMITED and its subsidiaries also claim rights in certain other trademarks and service marks contained in these web pages.</p>
           <p>Copies of the contents may be viewed and downloaded for your own personal non-commercial use, provided that any copy contains this Copyright/Disclaimer Notice. The contents may not otherwise be used in whole or in part in any manner without the prior written consent of MultiplyMarket.</p>
@@ -193,7 +192,7 @@
         <b>4. Changes to the Contract.</b>
           <p>This contract can only be changed or canceled with a written permission from the appropriate MultiplyMarket employee. A MultiplyMarket client support employee does not have the authority to make any changes to this agreement. The user also agrees that MultiplyMarket might make changes to the contract and will inform the user via email or platform notification. The client expresses his agreement regarding the changed conditions by continuing to use the platform.</p>
         <b>5. Area of Authority.</b>
-          <p>The stated terms shall be understood according to the laws of the Republic of Vanuatu. The client accepts to comply with the area of authority of the Republic of Vanuatu regarding any issues and matters of the law regarding the agreement and all terms stated on MultiplyMarket. All parties concur that the UN Convention on Contracts for the International Sale of goods is not valid and applicable.</p>
+          <p>The stated terms shall be understood according to the laws of the Republic of Marshall Islands. The client accepts to comply with the area of authority of the Republic of Marshall Islands regarding any issues and matters of the law regarding the agreement and all terms stated on MultiplyMarket. All parties concur that the UN Convention on Contracts for the International Sale of goods is not valid and applicable.</p>
         <b>Spreads</b>
           <ul>
             <li>About every major pair, the spread goes low to 1 pip.</li>
