--- a/mm/templates/account-types.html
+++ b/mm/templates/account-types.html
@@ -26,8 +26,8 @@
             <img src="../img/logo-w.svg" width="180" height="auto" alt="MultiplyMarket">
           </a>
           <div class="main-nav__user  main-nav__user--temp">
-            <a class="button" href="register.html">Open live account</a>
-            <a class="button  button--black" href="login.html">Log In</a>
+            <a class="button" href="https://client.multiplymarket.com/en/members/register/real">Open live account</a>
+            <a class="button  button--black" href="https://client.multiplymarket.com/en/members/login">Log In</a>
             <a class="button  button--number" href="tel:++442038290032">+442038290032</a>
           </div>
         </nav>
